--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+*
+{
+    font-family: pixel;
+    color: white;
+}
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  margin: 0;
+  overflow: hidden;
+  font-family: "Lato", sans-serif;
+  background-color: black;
+  background: url('./res/background.png');
+  background-size: cover;
+}
+
 canvas {
     display: block;
     position: absolute;
@@ -6,4 +27,63 @@ canvas {
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+span {
+    margin: 3px;
+}
+
+input {
+    color: black;
+    width: 500px;
+    padding: 15px;
+    margin: 5px;
+    border: 3px solid black;
+    font-size: 30px;
+    outline: none;
+}
+
+button {
+    color: black;
+    width: 500px;
+    padding: 15px;
+    border: 3px solid black;
+    font-size: 30px;
+    outline: none;
+}
+
+#startBtn, #hostBtn, #joinBtn {
+    animation: bounce 3s infinite;
+}
+
+#app {
+    position: absolute;
+    top: 150px;
+}
+
+#codeChannel {
+    margin: 5px;
+}
+
+.logo {
+    position: absolute;
+    top: 0px;
+    animation: bounce 2s infinite;
+    pointer-events: none;
+}
+
+.hostWindow, .joinWindow {
+    display: none;
+}
+
+@keyframes bounce
+{
+  	0%   { margin-top: 0px; }
+	50%  { margin-top: 15px; }
+	100%  { margin-top: 0px; }
+}
+
+@font-face {
+  font-family: pixel;
+  src: url('Munro.ttf');
 }
