--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ button {
     outline: none;
 }
 
+img {
+    image-rendering: pixelated;
+}
+
 #startBtn, #hostBtn, #joinBtn {
     animation: bounce 3s infinite;
 }
